one less folder
yes

--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
   <div class="row no-gutters">
       <div class="col-md-8">
       <div class="card-body">
-        <h5 class="card-title">President Message</h5>
+        <h5 class="card-title">Emperor's Message</h5>
         <p class="card-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."tent. This content is a little bit longer.</p>
