"many many"  changes
toggle sidebar enhanced, some dash for TP staff side

--- a/templates/Includes/navbarv3.html
+++ b/templates/Includes/navbarv3.html
@@ -108,7 +108,7 @@
 
 <body>
   <div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a> -->
     <div id="accordion">
       <h4 style="margin-bottom: 1.0em;" class="dropdown-header">Core</h4>
      <div class="accord-card">
@@ -179,7 +179,7 @@
   <div id="main">
     <div class="d-flex justify-content-between mb-3 top-navbar">
       <div class="p-2">
-        <button class="button3" id="sidebarToggle" onclick="openNav()"><i class="fas fa-bars"></i>&nbsp;&nbsp;Toggle Sidebar</button>
+        <button class="button3" id="sidebarToggle"><i class="fas fa-bars"></i>&nbsp;&nbsp;Toggle Sidebar</button>
       </div>
       <a class="p-2 logo" style="text-decoration:none;" href="/">Unified Help</a>
       <div class="p-2">
