--- a/templates/RG/cost_analysis.html
+++ b/templates/RG/cost_analysis.html
@@ -9,10 +9,50 @@
 
 <!-- Page content in here -->
 {% block content %}
-<h1>This is the cost Analysis page</h1>
+<div class="row">
+  <!-- Top Five Reduced Costs Column-->
+  <div class="col-lg-4">
+    <div class="card card-chart">
+      <div class="card-header">
+        <h5 class="card-category">Top 5 Reduced Costs</h5>
+      </div>
+      <div class="card-body">
+
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-4">
+    <div class="card card-chart">
+      <div class="card-header">
+        <h5 class="card-category">Daily Sales</h5>
+        <h3 class="card-title"><i class="tim-icons icon-delivery-fast text-info"></i> 3,500€</h3>
+      </div>
+      <div class="card-body">
+        <div class="chart-area">
+          <div class="chartjs-size-monitor" style="position: absolute; inset: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;"></div>
+          <canvas id="CountryChart" width="567" height="220" class="chartjs-render-monitor" style="display: block; height: 220px; width: 567px;"></canvas>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-4">
+    <div class="card card-chart">
+      <div class="card-header">
+        <h5 class="card-category">Completed Tasks</h5>
+        <h3 class="card-title"><i class="tim-icons icon-send text-success"></i> 12,100K</h3>
+      </div>
+      <div class="card-body">
+        <div class="chart-area">
+          <div class="chartjs-size-monitor" style="position: absolute; inset: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;"></div>
+          <canvas id="chartLineGreen" width="567" height="220" class="chartjs-render-monitor" style="display: block; height: 220px; width: 567px;"></canvas>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
 
 <!-- Link any js files here -->
-{% block scripts %}
+{% block script %}
 {{ super() }}
 {% endblock %}
