--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
     {% endblock %}
 </div>
 
-{% block scripts %}
+{% block script %}
 <!-- jQuery 3.5.1, Popper 1.16.1, Bootstrap 4.5.2 JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
