--- a/templates/RG/cost_analysis.html
+++ b/templates/RG/cost_analysis.html
@@ -5,27 +5,274 @@
 <!-- Any css files/ internal css in here -->
 {% block head %}
 {{ super() }}
+<link type="text/css" rel="stylesheet" href="{{url_for('static', filename='RG/cost_analysis.css')}}">
 {% endblock %}
 
 <!-- Page content in here -->
 {% block content %}
-<div class="row">
+<div class="card charts" style="border:none">
   <!-- Top Five Reduced Costs Column-->
+  <div class="row">
   <div class="col-lg-4">
     <div class="card card-chart">
       <div class="card-header">
-        <h5 class="card-category">Top 5 Reduced Costs</h5>
+        <h5 class="card-category">Top 5 Reduced Costs This Year</h5>
       </div>
       <div class="card-body">
-
+        <!--_________No.1 Reduced Cost___________-->
+        <div class="card card-header info-cards">
+        <div class="card-category">Administration</div>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-lg-4" style="background-color:green;"><i class="fas fa-hand-holding-usd" style="font-size:50px;"></i></div>
+              <div class="col-lg-4" style="background-color:red;">
+                <p class="total-reduced">$31</p>
+              </div>
+              <div class="col-lg-4" style="background-color:black;">
+                <canvas id="myChart"></canvas>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--_________No.2 Reduced Cost___________-->
+        <div class="card card-header info-cards">
+        <div class="card-category">Administration</div>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-lg-4" style="background-color:green;"><i class="fas fa-hand-holding-usd" style="font-size:50px;"></i></div>
+              <div class="col-lg-4" style="background-color:red;">
+                <p class="total-reduced">$31</p>
+              </div>
+              <div class="col-lg-4" style="background-color:black;">
+                <canvas id="myChart"></canvas>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--_________No.3 Reduced Cost___________-->
+        <div class="card card-header info-cards">
+        <div class="card-category">Administration</div>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-lg-4" style="background-color:green;"><i class="fas fa-hand-holding-usd" style="font-size:50px;"></i></div>
+              <div class="col-lg-4" style="background-color:red;">
+                <p class="total-reduced">$31</p>
+              </div>
+              <div class="col-lg-4" style="background-color:black;">
+                <canvas id="myChart"></canvas>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--_________No.4 Reduced Cost___________-->
+        <div class="card card-header info-cards">
+        <div class="card-category">Administration</div>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-lg-4" style="background-color:green;"><i class="fas fa-hand-holding-usd" style="font-size:50px;"></i></div>
+              <div class="col-lg-4" style="background-color:red;">
+                <p class="total-reduced">$31</p>
+              </div>
+              <div class="col-lg-4" style="background-color:black;">
+                <canvas id="myChart"></canvas>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--_________No.5 Reduced Cost___________-->
+        <div class="card card-header info-cards">
+        <div class="card-category">Administration</div>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-lg-4" style="background-color:green;"><i class="fas fa-hand-holding-usd" style="font-size:50px;"></i></div>
+              <div class="col-lg-4" style="background-color:red;">
+                <p class="total-reduced">$31</p>
+              </div>
+              <div class="col-lg-4" style="background-color:black;">
+                <canvas id="myChart"></canvas>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--Card showing total reduced costs__________-->
+    <div class="card card-header total-r-costs">
+      <div class="card-body text-center">
+        <p class="card-category r-costs-title">Total Reduced Costs This Year</p>
+        <p class="card-text"><strong>$1215</strong></p>
       </div>
     </div>
   </div>
-  <div class="col-lg-4">
-    <div class="card card-chart">
+  <div class="col-lg-8">
+  <div class="card costs-charts" style="border:none;">
+    <div class="row">
+    <div class="col-lg-6">
+      <!--___________Campaign Costs_____________-->
+      <div class="card card-chart">
+        <div class="card-header">
+          <div class="d-flex justify-content-between  mb-3">
+            <div class="p-2 card-title">
+              <h3>Campaign Costs</h3>
+            </div>
+            <div class="p-2">
+              <div class="btn-group btn-group-toggle float-right" data-toggle="buttons">
+                <label class="btn btn-sm btn-primary btn-simple active" id="0">
+                  <input type="radio" name="options" checked="">
+                  <span class="d-none d-sm-block d-md-block d-lg-block d-xl-block">This Month</span>
+                  <span class="d-block d-sm-none">
+                    <i class="tim-icons icon-single-02"></i>
+                  </span>
+                </label>
+                <label class="btn btn-sm btn-primary btn-simple" id="1">
+                  <input type="radio" class="d-none d-sm-none" name="options">
+                  <span class="d-none d-sm-block d-md-block d-lg-block d-xl-block">This Year</span>
+                  <span class="d-block d-sm-none">
+                    <i class="tim-icons icon-gift-2"></i>
+                  </span>
+                </label>
+                <label class="btn btn-sm btn-primary btn-simple" id="2">
+                  <input type="radio" class="d-none" name="options">
+                  <span class="d-none d-sm-block d-md-block d-lg-block d-xl-block">Last 5 Years</span>
+                  <span class="d-block d-sm-none">
+                    <i class="tim-icons icon-tap-02"></i>
+                  </span>
+                </label>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card-body">
+          <div class="chart-area">
+            <div class="chartjs-size-monitor" style="position: absolute; inset: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;"></div>
+            <canvas id="CountryChart" width="567" height="220" class="chartjs-render-monitor" style="display: block; height: 220px; width: 567px;"></canvas>
+          </div>
+        </div>
+      </div>
+      <div class="card card-chart" style="margin-top:5%;">
+        <div class="card-header">
+          <div class="d-flex justify-content-between  mb-3">
+            <div class="p-2 card-title">
+              <h3>Inventory Storage Costs</h3>
+            </div>
+            <div class="p-2">
+              <div class="btn-group btn-group-toggle float-right" data-toggle="buttons">
+                <label class="btn btn-sm btn-primary btn-simple active" id="0">
+                  <input type="radio" name="options" checked="">
+                  <span class="d-none d-sm-block d-md-block d-lg-block d-xl-block">This Month</span>
+                  <span class="d-block d-sm-none">
+                    <i class="tim-icons icon-single-02"></i>
+                  </span>
+                </label>
+                <label class="btn btn-sm btn-primary btn-simple" id="1">
+                  <input type="radio" class="d-none d-sm-none" name="options">
+                  <span class="d-none d-sm-block d-md-block d-lg-block d-xl-block">This Year</span>
+                  <span class="d-block d-sm-none">
+                    <i class="tim-icons icon-gift-2"></i>
+                  </span>
+                </label>
+                <label class="btn btn-sm btn-primary btn-simple" id="2">
+                  <input type="radio" class="d-none" name="options">
+                  <span class="d-none d-sm-block d-md-block d-lg-block d-xl-block">Last 5 Years</span>
+                  <span class="d-block d-sm-none">
+                    <i class="tim-icons icon-tap-02"></i>
+                  </span>
+                </label>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card-body">
+          <div class="chart-area">
+            <div class="chartjs-size-monitor" style="position: absolute; inset: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;"></div>
+            <canvas id="CountryChart" width="567" height="220" class="chartjs-render-monitor" style="display: block; height: 220px; width: 567px;"></canvas>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--_________Utilities Costs Charts____________-->
+    <div class="col-lg-6">
+      <div class="card card-chart">
+        <div class="card-header">
+          <div class="d-flex justify-content-between  mb-3">
+            <div class="p-2 card-title">
+              <h3>Utilities Costs</h3>
+            </div>
+            <div class="p-2">
+              <div class="btn-group btn-group-toggle float-right" data-toggle="buttons">
+                <label class="btn btn-sm btn-primary btn-simple active" id="0">
+                  <input type="radio" name="options" checked="">
+                  <span class="d-none d-sm-block d-md-block d-lg-block d-xl-block">This Month</span>
+                  <span class="d-block d-sm-none">
+                    <i class="tim-icons icon-single-02"></i>
+                  </span>
+                </label>
+                <label class="btn btn-sm btn-primary btn-simple" id="1">
+                  <input type="radio" class="d-none d-sm-none" name="options">
+                  <span class="d-none d-sm-block d-md-block d-lg-block d-xl-block">This Year</span>
+                  <span class="d-block d-sm-none">
+                    <i class="tim-icons icon-gift-2"></i>
+                  </span>
+                </label>
+                <label class="btn btn-sm btn-primary btn-simple" id="2">
+                  <input type="radio" class="d-none" name="options">
+                  <span class="d-none d-sm-block d-md-block d-lg-block d-xl-block">Last 5 Years</span>
+                  <span class="d-block d-sm-none">
+                    <i class="tim-icons icon-tap-02"></i>
+                  </span>
+                </label>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card-body">
+          <div class="chart-area">
+            <div class="chartjs-size-monitor" style="position: absolute; inset: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;"></div>
+            <canvas id="chartLineGreen" width="567" height="220" class="chartjs-render-monitor" style="display: block; height: 220px; width: 567px;"></canvas>
+          </div>
+        </div>
+        <div class="card-body">
+          <div class="chart-area">
+            <div class="chartjs-size-monitor" style="position: absolute; inset: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;"></div>
+            <canvas id="chartLineGreen" width="567" height="220" class="chartjs-render-monitor" style="display: block; height: 220px; width: 567px;"></canvas>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+    <!--___________Admin Costs Chart____________-->
+    <div class="card card-chart" style="margin-top:5%;">
       <div class="card-header">
-        <h5 class="card-category">Daily Sales</h5>
-        <h3 class="card-title"><i class="tim-icons icon-delivery-fast text-info"></i> 3,500€</h3>
+        <div class="d-flex justify-content-between  mb-3">
+          <div class="p-2 card-title">
+            <h3>Administration Costs</h3>
+          </div>
+          <div class="p-2">
+            <div class="btn-group btn-group-toggle float-right" data-toggle="buttons">
+              <label class="btn btn-sm btn-primary btn-simple active" id="0">
+                <input type="radio" name="options" checked="">
+                <span class="d-none d-sm-block d-md-block d-lg-block d-xl-block">This Month</span>
+                <span class="d-block d-sm-none">
+                  <i class="tim-icons icon-single-02"></i>
+                </span>
+              </label>
+              <label class="btn btn-sm btn-primary btn-simple" id="1">
+                <input type="radio" class="d-none d-sm-none" name="options">
+                <span class="d-none d-sm-block d-md-block d-lg-block d-xl-block">This Year</span>
+                <span class="d-block d-sm-none">
+                  <i class="tim-icons icon-gift-2"></i>
+                </span>
+              </label>
+              <label class="btn btn-sm btn-primary btn-simple" id="2">
+                <input type="radio" class="d-none" name="options">
+                <span class="d-none d-sm-block d-md-block d-lg-block d-xl-block">Last 5 Years</span>
+                <span class="d-block d-sm-none">
+                  <i class="tim-icons icon-tap-02"></i>
+                </span>
+              </label>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="card-body">
         <div class="chart-area">
@@ -34,21 +281,9 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class="col-lg-4">
-    <div class="card card-chart">
-      <div class="card-header">
-        <h5 class="card-category">Completed Tasks</h5>
-        <h3 class="card-title"><i class="tim-icons icon-send text-success"></i> 12,100K</h3>
-      </div>
-      <div class="card-body">
-        <div class="chart-area">
-          <div class="chartjs-size-monitor" style="position: absolute; inset: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;"></div>
-          <canvas id="chartLineGreen" width="567" height="220" class="chartjs-render-monitor" style="display: block; height: 220px; width: 567px;"></canvas>
-        </div>
-      </div>
-    </div>
-  </div>
+</div>
+</div>
+</div>
 </div>
 {% endblock %}
 
