--- a/templates/RG/cost_analysis.html
+++ b/templates/RG/cost_analysis.html
@@ -145,7 +145,7 @@
         <div class="card-body">
           <div class="chart-area">
             <div class="chartjs-size-monitor" style="position: absolute; inset: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;"></div>
-            <canvas id="CountryChart" width="567" height="220" class="chartjs-render-monitor" style="display: block; height: 220px; width: 567px;"></canvas>
+            <a href="/detailed_analysis"><canvas id="CountryChart" width="567" height="220" class="chartjs-render-monitor" style="display: block; height: 220px; width: 567px;"></canvas></a>
           </div>
         </div>
       </div>
