--- a/static/RG/detailed_analysis.css
+++ b/static/RG/detailed_analysis.css
@@ -1,5 +1,5 @@
 .detailed-box{
-  margin:3% 9%;
+  margin:3% 5%;
 }
 
 .details{
@@ -10,12 +10,18 @@
   margin-top: 5%;
   margin-left: auto;
   margin-right: auto;
+  padding: 10px 3px;
 }
 
 .r-costs-title{
-  font-size: 1.3em;
+  font-size: 1.1em;
   margin-top: -6%;
 }
 .card-text > strong{
   font-size: 3.5em;
+}
+
+h1{
+  text-align: center;
+  margin-top: 3%;
 }
