--- a/templates/RG/cost_analysis.html
+++ b/templates/RG/cost_analysis.html
@@ -117,21 +117,21 @@
             </div>
             <div class="p-2">
               <div class="btn-group btn-group-toggle float-right" data-toggle="buttons">
-                <label class="btn btn-sm btn-primary btn-simple active" id="0">
+                <label class="btn btn-sm btn-dark btn-simple active" id="0">
                   <input type="radio" name="options" checked="">
                   <span class="d-none d-sm-block d-md-block d-lg-block d-xl-block">This Month</span>
                   <span class="d-block d-sm-none">
                     <i class="tim-icons icon-single-02"></i>
                   </span>
                 </label>
-                <label class="btn btn-sm btn-primary btn-simple" id="1">
+                <label class="btn btn-sm btn-dark btn-simple" id="1">
                   <input type="radio" class="d-none d-sm-none" name="options">
                   <span class="d-none d-sm-block d-md-block d-lg-block d-xl-block">This Year</span>
                   <span class="d-block d-sm-none">
                     <i class="tim-icons icon-gift-2"></i>
                   </span>
                 </label>
-                <label class="btn btn-sm btn-primary btn-simple" id="2">
+                <label class="btn btn-sm btn-dark btn-simple" id="2">
                   <input type="radio" class="d-none" name="options">
                   <span class="d-none d-sm-block d-md-block d-lg-block d-xl-block">Last 5 Years</span>
                   <span class="d-block d-sm-none">
@@ -157,21 +157,21 @@
             </div>
             <div class="p-2">
               <div class="btn-group btn-group-toggle float-right" data-toggle="buttons">
-                <label class="btn btn-sm btn-primary btn-simple active" id="0">
+                <label class="btn btn-sm btn-dark btn-simple active" id="0">
                   <input type="radio" name="options" checked="">
                   <span class="d-none d-sm-block d-md-block d-lg-block d-xl-block">This Month</span>
                   <span class="d-block d-sm-none">
                     <i class="tim-icons icon-single-02"></i>
                   </span>
                 </label>
-                <label class="btn btn-sm btn-primary btn-simple" id="1">
+                <label class="btn btn-sm btn-dark btn-simple" id="1">
                   <input type="radio" class="d-none d-sm-none" name="options">
                   <span class="d-none d-sm-block d-md-block d-lg-block d-xl-block">This Year</span>
                   <span class="d-block d-sm-none">
                     <i class="tim-icons icon-gift-2"></i>
                   </span>
                 </label>
-                <label class="btn btn-sm btn-primary btn-simple" id="2">
+                <label class="btn btn-sm btn-dark btn-simple" id="2">
                   <input type="radio" class="d-none" name="options">
                   <span class="d-none d-sm-block d-md-block d-lg-block d-xl-block">Last 5 Years</span>
                   <span class="d-block d-sm-none">
@@ -200,21 +200,21 @@
             </div>
             <div class="p-2">
               <div class="btn-group btn-group-toggle float-right" data-toggle="buttons">
-                <label class="btn btn-sm btn-primary btn-simple active" id="0">
+                <label class="btn btn-sm btn-dark btn-simple active" id="0">
                   <input type="radio" name="options" checked="">
                   <span class="d-none d-sm-block d-md-block d-lg-block d-xl-block">This Month</span>
                   <span class="d-block d-sm-none">
                     <i class="tim-icons icon-single-02"></i>
                   </span>
                 </label>
-                <label class="btn btn-sm btn-primary btn-simple" id="1">
+                <label class="btn btn-sm btn-dark btn-simple" id="1">
                   <input type="radio" class="d-none d-sm-none" name="options">
                   <span class="d-none d-sm-block d-md-block d-lg-block d-xl-block">This Year</span>
                   <span class="d-block d-sm-none">
                     <i class="tim-icons icon-gift-2"></i>
                   </span>
                 </label>
-                <label class="btn btn-sm btn-primary btn-simple" id="2">
+                <label class="btn btn-sm btn-dark btn-simple" id="2">
                   <input type="radio" class="d-none" name="options">
                   <span class="d-none d-sm-block d-md-block d-lg-block d-xl-block">Last 5 Years</span>
                   <span class="d-block d-sm-none">
@@ -249,21 +249,21 @@
           </div>
           <div class="p-2">
             <div class="btn-group btn-group-toggle float-right" data-toggle="buttons">
-              <label class="btn btn-sm btn-primary btn-simple active" id="0">
+              <label class="btn btn-sm btn-dark btn-simple active" id="0">
                 <input type="radio" name="options" checked="">
                 <span class="d-none d-sm-block d-md-block d-lg-block d-xl-block">This Month</span>
                 <span class="d-block d-sm-none">
                   <i class="tim-icons icon-single-02"></i>
                 </span>
               </label>
-              <label class="btn btn-sm btn-primary btn-simple" id="1">
+              <label class="btn btn-sm btn-dark btn-simple" id="1">
                 <input type="radio" class="d-none d-sm-none" name="options">
                 <span class="d-none d-sm-block d-md-block d-lg-block d-xl-block">This Year</span>
                 <span class="d-block d-sm-none">
                   <i class="tim-icons icon-gift-2"></i>
                 </span>
               </label>
-              <label class="btn btn-sm btn-primary btn-simple" id="2">
+              <label class="btn btn-sm btn-dark btn-simple" id="2">
                 <input type="radio" class="d-none" name="options">
                 <span class="d-none d-sm-block d-md-block d-lg-block d-xl-block">Last 5 Years</span>
                 <span class="d-block d-sm-none">
