--- a/templates/RG/upload_insert_data.html
+++ b/templates/RG/upload_insert_data.html
@@ -20,7 +20,7 @@
         <h2>Upload Data File</h2>
         <p class="card-text first-line">Insert excel files with relavant Data Fields</p>
         <p class="card-text">Recommended for Batch Uploads</p>
-        <a class="choose" href="/upload_dataForm"><button type="button" class="btn btn-primary">Choose</button></a>
+        <a class="choose" href="/upload_dataForm"><button type="button" class="btn btn-dark">Choose</button></a>
       </div>
     </div>
     <!--__________Overview 2____________-->
@@ -30,33 +30,10 @@
         <p class="card-text first-line">Choose the data field and timeframe</p>
         <p class="card-text">Recommended for Single Data Value</p>
         <p class="card-text eg">(e.g. Monthly Administration Cost)</p>
-        <a class="choose" href="/manual_insertForm"><button type="button" class="btn btn-primary">Choose</button></a>
+        <a class="choose" href="/manual_insertForm"><button type="button" class="btn btn-dark">Choose</button></a>
       </div>
     </div>
   </div>
-  <!-- <div class="col-6">
-      <div class="card">
-        <div class="card-body text-center">
-          <h2>Upload Data File</h2>
-          <p class="card-text">Insert excel files with relavant Data Fields</p>
-          <p class="card-text">Recommended for Batch Uploads</p>
-          <a href=""<button type="button" class="btn btn-primary">Choose</button></a>
-        </div>
-      </div>
-    </div>
-    <div class="col-6">
-      <div class="card">
-        <div class="card-body text-center">
-          <h2>Manually Insert Data</h2>
-          <p class="card-text">Choose the data field and timeframe</p>
-          <p class="card-text">Recommended for Single Data Value</p>
-          <p class="card-text">(e.g. Monthly Administration Cost)</p>
-          <a href="/manual_insertForm"><button type="button" class="btn btn-primary">Choose</button></a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div> -->
   {% endblock %}
 
   <!-- Link any js files here -->
