--- a/templates/RG/dashboard.html
+++ b/templates/RG/dashboard.html
@@ -99,21 +99,21 @@
           </div>
           <div class="p-2">
             <div class="btn-group btn-group-toggle float-right" data-toggle="buttons">
-              <label class="btn btn-sm btn-dark btn-simple active" id="0">
+              <label class="btn btn-sm btn-dark btn-simple active" id="incoming_0">
                 <input type="radio" name="options" checked="">
                 <span class="d-none d-sm-block d-md-block d-lg-block d-xl-block">This Month</span>
                 <span class="d-block d-sm-none">
                   <i class="tim-icons icon-single-02"></i>
                 </span>
               </label>
-              <label class="btn btn-sm btn-dark btn-simple" id="1">
+              <label class="btn btn-sm btn-dark btn-simple" id="incoming_1">
                 <input type="radio" class="d-none d-sm-none" name="options">
                 <span class="d-none d-sm-block d-md-block d-lg-block d-xl-block">This Year</span>
                 <span class="d-block d-sm-none">
                   <i class="tim-icons icon-gift-2"></i>
                 </span>
               </label>
-              <label class="btn btn-sm btn-dark btn-simple" id="2">
+              <label class="btn btn-sm btn-dark btn-simple" id="incoming_2">
                 <input type="radio" class="d-none" name="options">
                 <span class="d-none d-sm-block d-md-block d-lg-block d-xl-block">Last 5 Years</span>
                 <span class="d-block d-sm-none">
@@ -125,9 +125,9 @@
         </div>
       </div>
       <div class="card-body">
+        <!--____________chart canvas for incoming Donation Analysis________________-->
         <div class="chart-area">
-          <div class="chartjs-size-monitor" style="position: absolute; inset: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;"></div>
-          <canvas id="myChart4" height="220"></canvas>
+          <div id="IDA_container"></div>
         </div>
       </div>
     </div>
@@ -153,8 +153,7 @@
       </div>
       <div class="card-body">
         <div class="chart-area">
-          <div class="chartjs-size-monitor" style="position: absolute; inset: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;"></div>
-          <canvas id="myChart" height="400"></canvas>
+          <div id="IS_container"></div>
         </div>
       </div>
     </div>
@@ -168,7 +167,7 @@
       <div class="card-header">
         <div class="d-flex justify-content-between  mb-3">
           <div class="p-2 card-title">
-            <h3>Incoming Donation Analysis</h3>
+            <h3>Online vs Offline Donations</h3>
           </div>
           <div class="p-2">
             <div class="btn-group btn-group-toggle float-right" data-toggle="buttons">
@@ -199,8 +198,7 @@
       </div>
       <div class="card-body">
         <div class="chart-area">
-          <div class="chartjs-size-monitor" style="position: absolute; inset: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;"></div>
-          <canvas id="myChart" height="220"></canvas>
+          <div id="On_vs_Off_container"></div>
         </div>
       </div>
     </div>
@@ -242,217 +240,193 @@
       </div>
       <div class="card-body">
         <div class="chart-area">
-          <div class="chartjs-size-monitor" style="position: absolute; inset: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;"></div>
-          <canvas id="myChart" height="220"></canvas>
+          <div id="EI_container"></div>
         </div>
       </div>
     </div>
   </div>
 </div>
 </div>
-
 {% endblock %}
 
 <!-- Link any js files here -->
 {% block script %}
 {{ super () }}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js" integrity="sha512-d9xgZrVZpmmQlfonhQUvTR7lMPtO7NkZMkA0ABN3PHCbKA5nqylQ/yWlFAyY6hYgdF1Qh6nYiuADWwKB4C2WSw==" crossorigin="anonymous"></script>
+<script src="https://cdn.anychart.com/releases/8.9.0/js/anychart-base.min.js"></script>
 <script>
-  var ctx = document.getElementById('myChart').getContext('2d');
-  var myChart = new Chart(ctx, {
-    type: 'bar',
-    data: {
-      labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
-      datasets: [{
-        label: '# of Votes',
-        data: [12, 19, 3, 5, 2, 3],
-        backgroundColor: [
-          'rgba(255, 99, 132, 0.2)',
-          'rgba(54, 162, 235, 0.2)',
-          'rgba(255, 206, 86, 0.2)',
-          'rgba(75, 192, 192, 0.2)',
-          'rgba(153, 102, 255, 0.2)',
-          'rgba(255, 159, 64, 0.2)'
-        ],
-        borderColor: [
-          'rgba(255, 99, 132, 1)',
-          'rgba(54, 162, 235, 1)',
-          'rgba(255, 206, 86, 1)',
-          'rgba(75, 192, 192, 1)',
-          'rgba(153, 102, 255, 1)',
-          'rgba(255, 159, 64, 1)'
-        ],
-        borderWidth: 1
-      }]
-    },
-    options: {
-      scales: {
-        yAxes: [{
-          ticks: {
-            beginAtZero: true
-          }
-        }]
-      }
-    }
+//--------------- Incoming Donation Analysis Area Chart ---------------//
+  anychart.onDocumentReady(function () {
+
+    // create a data set
+    var data = anychart.data.set([
+      ["Winter", 20000, 40000, 20000],
+      ["Spring", 20000, 40000, 40000],
+      ["Summer", 40000, 30000, 30000],
+      ["Autumn", 20000, 20000, 40000]
+    ]);
+
+    // map the data
+    var seriesData_1 = data.mapAs({x: 0, value: 1});
+    var seriesData_2 = data.mapAs({x: 0, value: 2});
+    var seriesData_3 = data.mapAs({x: 0, value: 3});
+
+    // create a chart
+    var chart = anychart.area();
+
+    // enable the value stacking mode
+    chart.yScale().stackMode("value");
+
+    // create area series, set the data
+    var series1 = chart.area(seriesData_1);
+    var series2 = chart.area(seriesData_2);
+    var series3 = chart.area(seriesData_3);
+
+    {% raw %}
+    // configure tooltips
+    chart.tooltip().format("{%value} ({%yPercentOfCategory}{decimalsCount:2}%)");
+
+    // configure labels on the y-axis
+    chart.yAxis().labels().format("{%value}");
+    {% endraw %}
+
+    // set the chart title
+    chart.title("Stacked Area Chart");
+
+    // set the container id
+    chart.container("IDA_container");
+
+    // initiate drawing the chart
+    chart.draw();
   });
 
-  var chart_labels = ['JAN', 'FEB', 'MAR', 'APR', 'MAY', 'JUN', 'JUL', 'AUG', 'SEP', 'OCT', 'NOV', 'DEC'];
-  var chart_data = [100, 70, 90, 70, 85, 60, 75, 60, 90, 80, 110, 100];
+//--------------- Inventory Space doughnut chart ---------------//
+  anychart.onDocumentReady(function () {
 
+    // create data
+    var data = [
+      {x: "A", value: 637166},
+      {x: "B", value: 721630},
+      {x: "C", value: 148662},
+      {x: "D", value: 78662},
+      {x: "E", value: 90000}
+    ];
 
-  var ctx = document.getElementById("chartBig1").getContext('2d');
+    // create a pie chart and set the data
+    var chart = anychart.pie(data);
 
-  var gradientStroke = ctx.createLinearGradient(0, 230, 0, 50);
+    /* set the inner radius
+    (to turn the pie chart into a doughnut chart)*/
+    chart.innerRadius("30%");
 
-  gradientStroke.addColorStop(1, 'rgba(72,72,176,0.1)');
-  gradientStroke.addColorStop(0.4, 'rgba(72,72,176,0.0)');
-  gradientStroke.addColorStop(0, 'rgba(119,52,169,0)'); //purple colors
-  var config = {
-    type: 'line',
-    data: {
-      labels: chart_labels,
-      datasets: [{
-        label: "My First dataset",
-        fill: true,
-        backgroundColor: gradientStroke,
-        borderColor: '#d346b1',
-        borderWidth: 2,
-        borderDash: [],
-        borderDashOffset: 0.0,
-        pointBackgroundColor: '#d346b1',
-        pointBorderColor: 'rgba(255,255,255,0)',
-        pointHoverBackgroundColor: '#d346b1',
-        pointBorderWidth: 20,
-        pointHoverRadius: 4,
-        pointHoverBorderWidth: 15,
-        pointRadius: 4,
-        data: chart_data,
-      }]
-    },
+    // set the chart title
+    chart.title("Doughnut Chart: Basic Sample");
 
-  };
-  var myChartData = new Chart(ctx, config);
-  $("#0").click(function() {
-    var data = myChartData.config.data;
-    data.datasets[0].data = chart_data;
-    data.labels = chart_labels;
-    myChartData.update();
-  });
-  $("#1").click(function() {
-    var chart_data = [80, 120, 105, 110, 95, 105, 90, 100, 80, 95, 70, 120];
-    var data = myChartData.config.data;
-    data.datasets[0].data = chart_data;
-    data.labels = chart_labels;
-    myChartData.update();
-  });
+    // set the container id
+    chart.container("IS_container");
 
-  $("#2").click(function() {
-    var chart_data = [60, 80, 65, 130, 80, 105, 90, 130, 70, 115, 60, 130];
-    var data = myChartData.config.data;
-    data.datasets[0].data = chart_data;
-    data.labels = chart_labels;
-    myChartData.update();
-  });
+    // initiate drawing the chart
+    chart.draw();
+});
 
-  var ctx = document.getElementById("chartLinePurple").getContext("2d");
+//--------------- Online vs Offline Donations Line graph (comparison) ---------------//
+anychart.onDocumentReady(function () {
 
-  var gradientStroke = ctx.createLinearGradient(0, 230, 0, 50);
+    // create a data set
+    var data = anychart.data.set([
+      ["January", 12000, 10000],
+      ["February", 15000, 12000],
+      ["March", 16000, 18000],
+      ["April", 15000, 11000],
+      ["May", 14000, 9000]
+    ]);
 
-  gradientStroke.addColorStop(1, 'rgba(72,72,176,0.2)');
-  gradientStroke.addColorStop(0.2, 'rgba(72,72,176,0.0)');
-  gradientStroke.addColorStop(0, 'rgba(119,52,169,0)'); //purple colors
+    // map the data
+    var seriesData_1 = data.mapAs({x: 0, value: 1});
+    var seriesData_2 = data.mapAs({x: 0, value: 2});
 
-  var data = {
-    labels: ['JUL', 'AUG', 'SEP', 'OCT', 'NOV', 'DEC'],
-    datasets: [{
-      label: "Data",
-      fill: true,
-      backgroundColor: gradientStroke,
-      borderColor: '#d048b6',
-      borderWidth: 2,
-      borderDash: [],
-      borderDashOffset: 0.0,
-      pointBackgroundColor: '#d048b6',
-      pointBorderColor: 'rgba(255,255,255,0)',
-      pointHoverBackgroundColor: '#d048b6',
-      pointBorderWidth: 20,
-      pointHoverRadius: 4,
-      pointHoverBorderWidth: 15,
-      pointRadius: 4,
-      data: [80, 100, 70, 80, 120, 80],
-    }]
-  };
+    // create a chart
+    var chart = anychart.line();
 
-  var myChart = new Chart(ctx, {
-    type: 'line',
-    data: data,
-  });
+    // set the interactivity mode
+    chart.interactivity().hoverMode("single");
 
+    // create the first series, set the data and name
+    var series1 = chart.line(seriesData_1);
+    series1.name("2004");
 
-  var ctxGreen = document.getElementById("chartLineGreen").getContext("2d");
+    // configure the visual settings of the first series
+    series1.normal().stroke("#00cc99", 1, "10 5", "round");
+    series1.hovered().stroke("#00cc99", 2, "10 5", "round");
+    series1.selected().stroke("#00cc99", 4, "10 5", "round");
 
-  var gradientStroke = ctx.createLinearGradient(0, 230, 0, 50);
+    // create the second series, set the data and name
+    var series2 = chart.line(seriesData_2);
+    series2.name("2005");
 
-  gradientStroke.addColorStop(1, 'rgba(66,134,121,0.15)');
-  gradientStroke.addColorStop(0.4, 'rgba(66,134,121,0.0)'); //green colors
-  gradientStroke.addColorStop(0, 'rgba(66,134,121,0)'); //green colors
+    // configure the visual settings of the second series
+    series2.normal().stroke("#0066cc");
+    series2.hovered().stroke("#0066cc", 2);
+    series2.selected().stroke("#0066cc", 4);
 
-  var data = {
-    labels: ['JUL', 'AUG', 'SEP', 'OCT', 'NOV'],
-    datasets: [{
-      label: "My First dataset",
-      fill: true,
-      backgroundColor: gradientStroke,
-      borderColor: '#00d6b4',
-      borderWidth: 2,
-      borderDash: [],
-      borderDashOffset: 0.0,
-      pointBackgroundColor: '#00d6b4',
-      pointBorderColor: 'rgba(255,255,255,0)',
-      pointHoverBackgroundColor: '#00d6b4',
-      pointBorderWidth: 20,
-      pointHoverRadius: 4,
-      pointHoverBorderWidth: 15,
-      pointRadius: 4,
-      data: [90, 27, 60, 12, 80],
-    }]
-  };
+    // set the chart title
+    chart.title("Line Chart: Appearance");
 
-  var myChart = new Chart(ctxGreen, {
-    type: 'line',
-    data: data,
+    // set the titles of the axes
+    chart.xAxis().title("Month");
+    chart.yAxis().title("Sales, $");
 
-  });
+    // set the container id
+    chart.container("On_vs_Off_container");
 
-  var ctx = document.getElementById("CountryChart").getContext("2d");
+    // initiate drawing the chart
+    chart.draw();
+});
+//--------------- Expenses Incurred bar chart ---------------//
+anychart.onDocumentReady(function () {
 
-  var gradientStroke = ctx.createLinearGradient(0, 230, 0, 50);
+    // create data
+    var data = [
+      {x: "John", value: 10000},
+      {x: "Jake", value: 12000},
+      {x: "Peter", value: 13000,
+       normal:   {
+           fill: "#5cd65c",
+           stroke: null,
+           label: {enabled: true}
+         },
+       hovered:  {
+           fill: "#5cd65c",
+           label: {enabled: true}
+         },
+       selected: {
+           fill: "#5cd65c",
+           label: {enabled: true}
+         }
+      },
+      {x: "James", value: 10000},
+      {x: "Mary", value: 9000}
+    ];
 
-  gradientStroke.addColorStop(1, 'rgba(29,140,248,0.2)');
-  gradientStroke.addColorStop(0.4, 'rgba(29,140,248,0.0)');
-  gradientStroke.addColorStop(0, 'rgba(29,140,248,0)'); //blue colors
+    // create a chart
+    var chart = anychart.column();
 
+    // create a column series and set the data
+    var series = chart.column(data);
 
-  var myChart = new Chart(ctx, {
-    type: 'bar',
-    responsive: true,
-    legend: {
-      display: false
-    },
-    data: {
-      labels: ['USA', 'GER', 'AUS', 'UK', 'RO', 'BR'],
-      datasets: [{
-        label: "Countries",
-        fill: true,
-        backgroundColor: gradientStroke,
-        hoverBackgroundColor: gradientStroke,
-        borderColor: '#1f8ef1',
-        borderWidth: 2,
-        borderDash: [],
-        borderDashOffset: 0.0,
-        data: [53, 20, 15, 80, 100, 45],
-      }]
-    },
-  });
+    // set the chart title
+    chart.title("Column Chart: Appearance (Individual Points)");
+
+    // set the titles of the axes
+    chart.xAxis().title("Manager");
+    chart.yAxis().title("Sales, $");
+
+    // set the container id
+    chart.container("EI_container");
+
+    // initiate drawing the chart
+    chart.draw();
+});
+
 </script>
 {% endblock %}
