--- a/static/RG/cost_analysis.css
+++ b/static/RG/cost_analysis.css
@@ -21,3 +21,12 @@
   margin-top: -4%;
   font-size: 1.1em;
 }
+
+.chart-area{
+  height: 400px;
+}
+
+#CC_container, #ISC_container, #AC_container, #UCW_container, #UCE_container{
+  height: 100%;
+  width: 100%;
+}
