--- a/templates/RG/cost_analysis.html
+++ b/templates/RG/cost_analysis.html
@@ -300,6 +300,7 @@ chart = anychart.line();
 // create a line series and set the data
 var series = chart.line(data);
 
+chart.yScale().minimum(0);
 // set the container id
 chart.container("CC_container");
 
