--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,10 @@
 
 
 <script src="https://cdn.anychart.com/releases/8.9.0/js/anychart-base.min.js"></script>
+<script src = "https://cdn.anychart.com/releases/8.9.0/js/anychart-ui.min.js?hcode=a0c21fc77e1449cc86299c5faa067dc4"></script>
+<script src = "https://cdn.anychart.com/releases/8.9.0/js/anychart-exports.min.js?hcode=a0c21fc77e1449cc86299c5faa067dc4"></script>
+<script src = "https://cdn.anychart.com/releases/8.9.0/js/anychart-stock.min.js?hcode=a0c21fc77e1449cc86299c5faa067dc4"></script>
+<script src = "https://cdn.anychart.com/releases/8.9.0/js/anychart-core.min.js?hcode=a0c21fc77e1449cc86299c5faa067dc4"></script>
 {% block script %}
 <!-- jQuery 3.5.1, Popper 1.16.1, Bootstrap 4.5.2 JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
